[workspace]

exclude = ["standalone/teeworker/ceseal"]

members = [
    "crates/bloom-filter",
    "crates/ces-allocator",
    "crates/ces-crypto",
    "crates/ces-mq",
    "crates/ces-node-rpc-ext",
    "crates/ces-pdp",
    "crates/ces-pois",
    "crates/ces-sanitized-logger",
    "crates/ces-serde-more",
    "crates/cestory",
    "crates/cestory/api",
    "crates/cestory/pal",
    "crates/ces-trie-storage",
    "crates/ces-types",
    "crates/cesxt",
    "crates/common",
    "crates/enclave-verify",
    "crates/reqwest-env-proxy",
    "crates/rrsc-vrf-solver",
    "crates/scheduler-credit",
    "crates/sgx-api-lite",
    "crates/sgx-attestation",
    "pallets/audit",
    "pallets/cacher",
    "pallets/cess-treasury",
    "pallets/evm-account-mapping",
    "pallets/file-bank",
    "pallets/mq",
    "pallets/mq/runtime-api",
    "pallets/oss",
    "pallets/reservoir",
    "pallets/scheduler-credit",
    "pallets/sminer",
    "pallets/staking",
    "pallets/storage-handler",
    "pallets/tee-worker",
    "standalone/chain/node",
    "standalone/chain/primitives",
    "standalone/chain/runtime",
    "standalone/teeworker/cifrost",
    "standalone/teeworker/handover",
]

resolver = "2"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.testnet]
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
inherits = "release"
overflow-checks = true

[workspace.package]
authors = ["CESS LAB"]
edition = "2021"
repository = "https://github.com/CESSProject/cess"

[workspace.dependencies]
# ---- Substrate crates begin ----
#	primitives
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-statement-store = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

#	frames
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
frame-support-test = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }

#	pallets
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-asset-rate = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-asset-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-asset-conversion = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-asset-conversion-tx-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-transaction-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-bounties = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-child-bounties = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-election-provider-support-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-fast-unstake = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-indices = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-lottery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-migrations = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-nomination-pools = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-nomination-pools-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-nomination-pools-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-offences-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-recovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false, features = [
    "historical",
] }
pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-state-trie-migration = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-society = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-parameters = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

#   client dependencies
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-epochs = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network-statement = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network-test = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-rpc-spec-v2 = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-service-test = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-statement-store = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-storage-monitor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }

substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
node-inspect = { package = "staging-node-inspect", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
try-runtime-cli = { git = "https://github.com/CESSProject/try-runtime-cli", branch = "stable2412", default-features = false }
substrate-frame-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-rpc-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
mmr-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
fork-tree = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }

polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
# ---- Substrate crates end ----

# ---- Frontier crates begin ----
fp-account = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fp-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fp-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fp-self-contained = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fp-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }

pallet-base-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
pallet-ethereum = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
pallet-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }

fc-api = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412" }
fc-cli = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fc-consensus = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fc-db = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fc-mapping-sync = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fc-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fc-rpc-core = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
fc-storage = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2412", default-features = false }
# ---- Frontier crates end ----

# ---- Generic crates begin ----
aead = { version = "0.4.3", default-features = false }
aead-io = { version = "0.1.2" }
anyhow = { version = "1", default-features = false }
array-bytes = "6.1"
assert_cmd = "2.0.14"
assert_matches = "1.5.0"
async-trait = "0.1"
asn1_der = { version = "0.7", default-features = false }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
bigdecimal = "0.4"
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
const-str = { version = "0.5", default-features = false }
const-oid = { version = "0.9.5", default-features = false }
criterion = { version = "0.5", features = ["async_tokio"] }
curve25519-dalek = { version = "4.1", default-features = false }
dashmap = "5.5.3"
derive_more = { version = "1.0.0", default-features = false, features = [
    "display",
] }
derive_wrapper = "0.1.7"
der = { version = "0.7", default-features = false }
either = "1.8.1"
env_logger = "0.11"
ethabi = { git = "https://github.com/CESSProject/ethabi", branch = "upgrade-ethereum-types", default-features = false }
environmental = { version = "1.1", default-features = false }
finality-grandpa = { version = "0.16", default-features = false, features = [
    "derive-codec",
] }
futures = "0.3"
getrandom = { version = "0.2.10", default-features = false, features = [
    "custom",
] }
glob = "0.3"
hash-db = { version = "0.16.0", default-features = false }
hash256-std-hasher = { version = "0.15", default-features = false }
hex = { version = "0.4", default-features = false }
hex_fmt = "0.3"
hex-literal = "0.4.1"
humantime = "2.1.0"
h2 = { version = "0.4" }
im = { version = "15", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
impl-serde = "0.5.0"
insta = "1"
itertools = { version = "0.13", default-features = false }
jsonrpsee = { version = "0.24.3" }
keccak-hasher = "0.16.0"
lazy_static = { version = "1", default-features = false }
libc = "0.2"
log = { version = "0.4.22", default-features = false }
merkle_light = "0.4.0"
num-bigint = "0.4"
num-bigint-dig = "0.8.4"
num-integer = "0.1.45"
num-rational = "0.4"
num-traits = "0.2"
once_cell = "1"
parity-scale-codec = { version = "3.6.12", default-features = false }
parking_lot = "0.12"
platforms = "3.0"
primitive-types = { version = "0.13.1", default-features = false }
proc-macro2 = "1.0"
prost = { version = "0.11", default-features = false, features = [
    "prost-derive",
] }
prost-build = "0.12"
prost-types = "0.12"
pink-json = { version = "0.4", default-features = false }
pem = { version = "3", default-features = false }
quote = "1.0"
rand = "0.8.5"
rand_chacha = { version = "0.3", default-features = false }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "socks",
    "trust-dns",
] }
ring = "0.16.20"
rsa = { version = "0.8", default-features = false }
rust-crypto = "0.2.36"
smallvec = "1.13"
scale-bits = "0.6"
scale-decode = "0.13"
scale-encode = "0.7"
scale-info = { version = "2.11", default-features = false }
scale-value = "0.16"
schnorrkel = { version = "0.11", default-features = false }
scopeguard = { version = "1.1", default-features = false }
serde = { version = "1", default-features = false }
serde_cbor = "0.11.2"
serde_json = { version = "1.0.108", default-features = false }
serde-json-core = { version = "0.5", default-features = false }
sha2 = { version = "0.10", default-features = false }
soketto = "0.8"
spin = { version = "0.9", default-features = false, features = [
    "mutex",
    "use_ticket_mutex",
] }
static_assertions = "1.1.0"
subxt = { git = "https://github.com/CESSProject/subxt", branch = "polkadot-stable2412", default-features = false }
syn = "2.0"
tempfile = "3.10"
thiserror = "1.0"
threadpool = "1.8.1"
tokio = { version = "1" }
tokio-util = { version = "0.7", features = ["compat"] }
tonic = { version = "0.9.2" }
tonic-build = { version = "0.9.2", features = ["prost"] }
tokio-stream = { version = "0.1" }
tower = { version = "0.4" }
tracing = { version = "0.1", default-features = false }
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trie-db = "0.29"
typenum = { version = "1.14.0", default-features = false }
untrusted = { version = "0.9.0" }
urlencoding = "2"
vergen = { version = "8.3", default-features = false }
wait-timeout = "0.2"
webpki = { git = "https://github.com/rustls/webpki", version = "=0.102.0-alpha.3", package = "rustls-webpki", default-features = false, features = [
    "alloc",
    "ring",
], rev = "2ed9a4324f48c2c46ffdd7dc9d3eb315af25fce2" } # Release version no-std has bug
walkdir = "2.5.0"
x509-cert = { version = "0.2.4", default-features = false }
# webpki = { version = "0.102.0", package = "rustls-webpki", default-features = false, features = ["alloc", "ring"] }
# ---- Generic crates end ----

# ---- Cess workspace crates and pallets begin ----
ces-crypto = { path = "crates/ces-crypto", default-features = false }
ces-mq = { path = "crates/ces-mq", default-features = false }
ces-node-rpc-ext = { path = "crates/ces-node-rpc-ext" }
ces-node-rpc-ext-types = { path = "crates/ces-node-rpc-ext/types" }
ces-node-runtime = { path = "standalone/chain/runtime", package = "cess-node-runtime", default-features = false }
ces-pallet-mq = { path = "pallets/mq", default-features = false }
ces-pallet-mq-runtime-api = { path = "pallets/mq/runtime-api", default-features = false }
ces-pdp = { path = "crates/ces-pdp" }
ces-pois = { path = "crates/ces-pois" }
ces-sanitized-logger = { path = "crates/ces-sanitized-logger" }
ces-serde-more = { path = "crates/ces-serde-more", default-features = false }
ces-trie-storage = { path = "crates/ces-trie-storage", default-features = false }
ces-types = { path = "crates/ces-types", default-features = false }
cess-node-runtime = { path = "standalone/chain/runtime", default-features = false }
cestory-api = { path = "crates/cestory/api", default-features = false }
cestory-pal = { path = "crates/cestory/pal", default-features = false }
cesxt = { path = "crates/cesxt" }
chain = { path = "standalone/chain/runtime", package = "cess-node-runtime", default-features = false }
cp-bloom-filter = { path = "crates/bloom-filter", default-features = false }
cp-cess-common = { path = "crates/common", default-features = false }
cp-enclave-verify = { path = "crates/enclave-verify", default-features = false }
cp-scheduler-credit = { path = "crates/scheduler-credit", default-features = false }
node-executor = { path = "standalone/chain/executor" }
node-rpc = { path = "standalone/chain/rpc" }
pallet-audit = { path = "pallets/audit", default-features = false }
pallet-cacher = { path = "pallets/cacher", default-features = false }
pallet-cess-staking = { path = "pallets/staking", default-features = false }
pallet-cess-treasury = { path = "pallets/cess-treasury", default-features = false }
pallet-evm-account-mapping = { path = "pallets/evm-account-mapping", default-features = false }
pallet-file-bank = { path = "pallets/file-bank", default-features = false }
pallet-oss = { path = "pallets/oss", default-features = false }
pallet-reservoir = { path = "pallets/reservoir", default-features = false }
pallet-scheduler-credit = { path = "pallets/scheduler-credit", default-features = false }
pallet-sminer = { path = "pallets/sminer", default-features = false }
pallet-storage-handler = { path = "pallets/storage-handler", default-features = false }
pallet-tee-worker = { path = "pallets/tee-worker", default-features = false }
reqwest-env-proxy = { path = "crates/reqwest-env-proxy", default-features = false }
runtime = { path = "standalone/chain/runtime", package = "cess-node-runtime", default-features = false }
sgx-api-lite = { path = "crates/sgx-api-lite" }
sgx-attestation = { path = "crates/sgx-attestation", default-features = false }
# RRSC
ces-rrsc-vrf-solver = { path = "crates/rrsc-vrf-solver", default-features = false }

cess-node-primitives = { path = "standalone/chain/primitives", default-features = false }
# ---- Cess workspace crates and pallets end ----


[patch.crates-io]
ring = { git = "https://github.com/jasl/ring-xous", branch = "better-wasm32-support" }
