[package]
authors = ['CESS LAB']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
license = 'Unlicense'
name = 'cess-node'
repository = 'https://github.com/CESSProject/cess'
version = '0.5.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'cess-node'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '3.0.0'

[dependencies]
serde_json = "1.0"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
structopt = '0.3.8'
rand = "0.8"
futures = "0.3.19"
codec = { package = "parity-scale-codec", version = "3.0.0" }
clap = { version = "3.1.6", features = ["derive"], optional = true }
serde = { version = "1.0.136", features = ["derive"] }
hex-literal = "0.3.4"

# Frontier
fc-consensus = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fc-db = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fc-mapping-sync = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fc-rpc = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fc-rpc-core = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fp-consensus = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fp-dynamic-fee = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fp-evm = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fp-rpc = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }
fp-storage = { git = "https://github.com/CESSProject/frontier", branch = "monthly-2022-04-cess", default-features = false }

[dependencies.cess-node-runtime]
path = '../runtime'

[dependencies.frame-system-rpc-runtime-api]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-network]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.frame-benchmarking]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-mmr-rpc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '3.0.0'

[dependencies.substrate-state-trie-migration-rpc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.cessc-sync-state-rpc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.try-runtime-cli]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = "0.10.0-dev"
optional = true

[build-dependencies.try-runtime-cli]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = "0.10.0-dev"
optional = true

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-basic-authorship]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-client-api]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-consensus]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.cessc-consensus-rrsc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-consensus-slots]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.grandpa-primitives]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
package = 'sp-finality-grandpa'
version = '4.0.0-dev'

[dependencies.grandpa]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
package = 'sc-finality-grandpa'
version = '0.10.0-dev'

[dependencies.sc-keystore]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-rpc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-rpc-api]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-telemetry]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-transaction-pool]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-api]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-block-builder]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-blockchain]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-consensus]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.cessp-consensus-rrsc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sp-core]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '6.0.0'

[dependencies.sp-timestamp]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-im-online]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-segment-book]
default-features = false
path = '../c-pallets/segment-book'
version = '0.5.1'

[dependencies.sp-authority-discovery]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-transaction-storage-proof]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sp-authorship]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-consensus-uncles]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-finality-grandpa-rpc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.cessc-consensus-rrsc-rpc]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sp-keystore]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.12.0'

[dependencies.sc-consensus-epochs]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[dependencies.sc-chain-spec]
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-contracts]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.pallet-contracts-rpc]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '4.0.0-dev'

[dependencies.sc-authority-discovery]
default-features = false
git = 'https://github.com/CESSProject/substrate.git'
branch = 'monthly-2022-04-cess'
version = '0.10.0-dev'

[features]
default = ["cli"]
runtime-benchmarks = ['cess-node-runtime/runtime-benchmarks']
try-runtime = ["cess-node-runtime/try-runtime", "try-runtime-cli"]

cli = [
	"clap",
	"try-runtime-cli",
]
